# KnWin32ApiMonitor

./: .gitattributes  .gitignore  Build.ps1  LICENSE  README.md  Release.ps1  Start-App.ps1  Stop-App.ps1  package-lock.json  package.json
apps/knmon-ui/: index.html  package.json  vite.config.ts
apps/knmon-ui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/knmon-ui/src-tauri/capabilities/: default.json
apps/knmon-ui/src-tauri/src/: main.rs
contracts/: agent-event.schema.json  agent-handshake.schema.json  api-definition.schema.json  argument.schema.json  audit-event.schema.json  capture-result.schema.json  capture-session-state.schema.json  collector-stats.schema.json  definition-metadata.schema.json  event.schema.json  hook-status.schema.json  knapm-index.schema.json  knapm-manifest.schema.json  launch-request.schema.json  launch-result.schema.json  memory-snapshot.schema.json  native-daemon-audit.schema.json  native-daemon-recovery-apply.schema.json  native-daemon-recovery-plan.schema.json  native-daemon-status.schema.json  native-session-frame.schema.json  native-session.schema.json  native-trace-batch.schema.json  process-tree-node.schema.json  process-tree-result.schema.json  protocol-version.json  session-catalog.schema.json  session-info.schema.json  session-manifest.schema.json  session-replay-result.schema.json  target-process.schema.json
crates/knmon-tauri/: Cargo.toml
definitions/com/: README.md
definitions/custom/: README.md
definitions/metadata/: decode-aliases.json  enums.json  flags.json  id-assignments.json
definitions/nt/: README.md  ntdll-win11-exports.json
definitions/win32/: advapi32.json  api-ms-win-core-winrt-l1-1-0.json  bcrypt.json  crypt32.json  dbghelp.json  dnsapi.json  file-io.json  file-metadata.json  gdi32.json  generated-win32metadata-bulk.json  handle.json  iphlpapi.json  loader.json  memory.json  module.json  ole32.json  oleaut32.json  process.json  psapi.json  resolver.json  rpcrt4.json  secur32.json  setupapi.json  shell32.json  shlwapi.json  synchronization.json  threading.json  user32.json  userenv.json  version.json  winhttp.json  wininet.json  wintrust.json  ws2_32.json
docs/: architecture.md  definition-schema.md  product-design.md  resolver-returned-pointer-instrumentation-design.md  roadmap.md
docs/release-notes/: v0.1.0.2.md
native/: CMakeLists.txt  version.rc.in
native/knmon-agent32/: README.md
native/knmon-agent32/src/: README.md
native/knmon-agent64/: README.md
native/knmon-agent64/src/: AgentMain.cpp  GeneratedAgentHooks.inc  GeneratedAgentHooksChunk0.cpp  GeneratedAgentHooksChunk1.cpp  GeneratedAgentHooksChunk10.cpp  GeneratedAgentHooksChunk11.cpp  GeneratedAgentHooksChunk12.cpp  GeneratedAgentHooksChunk13.cpp  GeneratedAgentHooksChunk14.cpp  GeneratedAgentHooksChunk15.cpp  GeneratedAgentHooksChunk16.cpp  GeneratedAgentHooksChunk17.cpp  GeneratedAgentHooksChunk18.cpp  GeneratedAgentHooksChunk19.cpp  GeneratedAgentHooksChunk2.cpp  GeneratedAgentHooksChunk20.cpp  GeneratedAgentHooksChunk21.cpp  GeneratedAgentHooksChunk22.cpp  GeneratedAgentHooksChunk23.cpp  GeneratedAgentHooksChunk24.cpp  GeneratedAgentHooksChunk25.cpp  GeneratedAgentHooksChunk26.cpp  GeneratedAgentHooksChunk27.cpp  GeneratedAgentHooksChunk28.cpp  GeneratedAgentHooksChunk29.cpp  GeneratedAgentHooksChunk3.cpp  GeneratedAgentHooksChunk30.cpp  GeneratedAgentHooksChunk31.cpp  GeneratedAgentHooksChunk32.cpp  GeneratedAgentHooksChunk33.cpp  GeneratedAgentHooksChunk34.cpp  GeneratedAgentHooksChunk35.cpp  GeneratedAgentHooksChunk36.cpp  GeneratedAgentHooksChunk37.cpp  GeneratedAgentHooksChunk38.cpp  GeneratedAgentHooksChunk39.cpp  GeneratedAgentHooksChunk4.cpp  GeneratedAgentHooksChunk40.cpp  GeneratedAgentHooksChunk41.cpp  GeneratedAgentHooksChunk42.cpp  (+21 more)
native/knmon-collector/include/knmon/collector/: Collector.h  SharedTransportReader.h  ThreadedSharedTransportReader.h
native/knmon-collector/src/: Collector.cpp  SharedTransportReader.cpp  ThreadedSharedTransportReader.cpp  main.cpp
native/knmon-common/include/knmon/common/: AttachConfig.h  GeneratedApiIds.h  GeneratedApiMetadata.h  Protocol.h
native/knmon-common/src/: GeneratedApiMetadataParametersChunk0.cpp  GeneratedApiMetadataParametersChunk1.cpp  GeneratedApiMetadataParametersChunk10.cpp  GeneratedApiMetadataParametersChunk11.cpp  GeneratedApiMetadataParametersChunk12.cpp  GeneratedApiMetadataParametersChunk13.cpp  GeneratedApiMetadataParametersChunk14.cpp  GeneratedApiMetadataParametersChunk15.cpp  GeneratedApiMetadataParametersChunk16.cpp  GeneratedApiMetadataParametersChunk17.cpp  GeneratedApiMetadataParametersChunk18.cpp  GeneratedApiMetadataParametersChunk19.cpp  GeneratedApiMetadataParametersChunk2.cpp  GeneratedApiMetadataParametersChunk20.cpp  GeneratedApiMetadataParametersChunk21.cpp  GeneratedApiMetadataParametersChunk22.cpp  GeneratedApiMetadataParametersChunk23.cpp  GeneratedApiMetadataParametersChunk24.cpp  GeneratedApiMetadataParametersChunk25.cpp  GeneratedApiMetadataParametersChunk26.cpp  GeneratedApiMetadataParametersChunk27.cpp  GeneratedApiMetadataParametersChunk28.cpp  GeneratedApiMetadataParametersChunk29.cpp  GeneratedApiMetadataParametersChunk3.cpp  GeneratedApiMetadataParametersChunk30.cpp  GeneratedApiMetadataParametersChunk31.cpp  GeneratedApiMetadataParametersChunk32.cpp  GeneratedApiMetadataParametersChunk33.cpp  GeneratedApiMetadataParametersChunk34.cpp  GeneratedApiMetadataParametersChunk35.cpp  GeneratedApiMetadataParametersChunk36.cpp  GeneratedApiMetadataParametersChunk37.cpp  GeneratedApiMetadataParametersChunk38.cpp  GeneratedApiMetadataParametersChunk39.cpp  GeneratedApiMetadataParametersChunk4.cpp  GeneratedApiMetadataParametersChunk40.cpp  GeneratedApiMetadataParametersChunk41.cpp  GeneratedApiMetadataParametersChunk42.cpp  GeneratedApiMetadataParametersChunk43.cpp  GeneratedApiMetadataParametersChunk44.cpp  (+16 more)
native/knmon-core/include/knmon/core/: Controller.h
native/knmon-core/src/: Controller.cpp
native/knmon-native-helper/src/: main.cpp
samples/sessions/: README.md
samples/targets/: README.md
tests/definition/: README.md
(+211 files in other folders)
